--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.2.13",
     "@types/react-dom": "^19.2.3",
+    "framer-motion": "^12.33.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
+    "react-icons": "^4.12.0",
+    "react-router-dom": "^7.13.0",
     "react-scripts": "5.0.1",
+    "tailwindcss": "^3.4.19",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -40,5 +44,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.24",
+    "postcss": "^8.5.6"
   }
 }
